--- a/index.html
+++ b/index.html
@@ -14,44 +14,89 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
 
     <!--Custom CSS file link-->
-   <link rel="stylesheet" href="./css/style.css">
-
-
-
-
-
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
 <body>
- <section class="header">
-    <div class="headertxt">
+    <section class="header">
+        <div class="headertxt">
 
-        <h1><b>Let's Help Those <br/> Who Are More In Need</b></h1>
-        <p><b>A donation is a gift for charity, humanitarian aid,
-            or to benefit a cause.</b></p>
+            <h1><b>Let's Help Those <br /> Who Are More In Need</b></h1>
+            <p><b>A donation is a gift for charity, humanitarian aid,
+                    or to benefit a cause.</b></p>
 
-    </div>
+        </div>
 
-   <div class="link-button"> <a href="">Donate Now</a></div>
+        <div class="link-button"> <a href="">Donate Now</a></div>
 
 
- </section>
+    </section>
 
- <section class="donate">
+    <section class="donate">
 
         <h1>Donate Today</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum aut nemo libero quibusdam quisquam velit quaerat illum voluptas, vero autem, sapiente cupiditate cumque quam iste sunt! Quisquam dolorum laboriosam odio.</p>
+        <p>The Global Action Fund is our “where most needed” fund that has a global impact. By working together we can
+            help millions of people</p>
+
+        <Div class="donate-today">
+
+            <ul>
+                <li>100Tk</li>
+                <li>200Tk</li>
+                <li>500Tk</li>
+                <li>1000Tk</li>
+                <li>5000Tk</li>
+            </ul>
+
+            <div class="input">
+                <input type="number" name="amount" id="amount" placeholder="Other Amount (Taka)">
+                <hr>
+            </div>
+
+            <div class="link-button donate-button"> <a href="">Donate Now</a></div>
+
+        </Div>
+    </section>
+
+
+    <section class="plan">
+
+        <div class="donate">
+
+            <h1>Our Donate plan</h1>
+            <p>The Global Action Fund is our “where most needed” fund that has a global impact. By working together we
+                can help millions of people</p>
+
+        </div>
+    </section>
+
+    <section class="plan">
+        <div class="plan1">
+                    <h2>Food for a family</h2>
+                    <p> at neque alias, animi impedit incidunt recusandae! </p>
+        </div>
+
+        <div class="plan2" >
+                    <h2>Food for a family</h2>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        </div>
+
+        <div class="plan3">
+                    <h2>Food for a family</h2>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+       </div>
+
+
+    </section>
 
 
 
 
 
- </section>
 
 
 
-  
 
 
 
