--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <p> at neque alias, animi impedit incidunt recusandae! </p>
         </div>
 
-        <div class="plan2" >
+        <div class="plan2">
                     <h2>Food for a family</h2>
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
@@ -87,8 +87,51 @@
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
        </div>
 
+</section>
 
-    </section>
+<section class="contribute">
+
+        <div class="contribute_txt">
+                    <h1>Their lives depend on your donation</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas est et enim possimus, a quos ullam, ut, dolores nostrum facilis maiores iste voluptatibus. Minus possimus, fuga amet quisquam tempore ullam</p>
+                    <div class="link-button donate-button"> <a href="">How to Contribute?</a></div>
+        </div>
+
+        <div>
+                    <img src="./img/donation2.jpg" alt="">
+        </div>
+
+</section>
+
+    <section class="contribute contibute2">
+            </div>
+                        <img src="./img/donation1.jpg" alt="">
+            </div>
+
+        <div class="contribute_txt">
+                <h1>Their lives depend on your donation</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas est et enim possimus, a quos ullam, ut, dolores nostrum facilis maiores iste voluptatibus. Minus possimus, fuga amet quisquam tempore ullam</p>
+        <div class="link-button donate-button"> <a href="">How to Contribute?</a></div>
+
+        </div>
+
+</section>
+
+<section class="searchbar">
+
+    <div class="donate">
+
+                <h1>Get My Updates</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus et quaerat consequuntur, voluptates dolore consequatur veniam debitis delectus tempora perspiciatis harum sed alias eos?</p>
+
+    </div>
+
+
+
+
+</section>
+
+        
 
 
 
@@ -97,6 +140,19 @@
 
 
 
+   
+
+
+
+
+
+
+
+    <footer>
+        <div> 
+            <h4>@All Rights Reserved</h4>
+        </div>
+    </footer>
 
 
 
