--- a/index.html
+++ b/index.html
@@ -123,9 +123,15 @@
 
                 <h1>Get My Updates</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus et quaerat consequuntur, voluptates dolore consequatur veniam debitis delectus tempora perspiciatis harum sed alias eos?</p>
-
     </div>
+<div class="email">
 
+    <input type="email" name="email" id="email" placeholder="E-mail">
+    <button><a href="#"></a>Subscribe</button>
+
+
+
+</div>
 
 
 
