--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <ul>
                 <li>100Tk</li>
-                <li>200Tk</li>
+                <li id="color">200Tk</li>
                 <li>500Tk</li>
                 <li>1000Tk</li>
                 <li>5000Tk</li>
@@ -78,12 +78,12 @@
         </div>
 
         <div class="plan2">
-                    <h2>Food for a family</h2>
+                    <h2>Shelter for a family</h2>
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
 
         <div class="plan3">
-                    <h2>Food for a family</h2>
+                    <h2>Education for a child</h2>
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
        </div>
 
